# pyarch-book-exercises

./: README.md  pyproject.toml
app/: allocate.py  model.py  schemas.py
tests/: test_allocate.py  test_model.py  test_schemas.py
