[tool.poetry]
name = "pyarch"
version = "0.1.0"
description = ""
authors = ["fedeval <federico.valenza5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
pytest = "^7.2.0"
pytest-clarity = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
